Center body - because the body has a fixed width, everything was shifted to the left

--- a/great-idea-website/css/style.css
+++ b/great-idea-website/css/style.css
@@ -2,6 +2,7 @@ body {
 	width: 1024px;
 	padding: 0px 75px;
 	font-size: 16px;
+	margin: 0 auto;
 }
 
 a {
